--- a/oscam.conf
+++ b/oscam.conf
@@ -11,6 +11,7 @@ ecmfmt                        = c@p/s/d/l:CW:w_c@
 
 
 [streamrelay]
+stream_relay_enabled          = 1
 stream_relay_ctab             = 098D,0960,0963,098C
 
 [dvbapi]
